# quanta

./: .env.example  .gitignore  INSTRUCTIONS.md  OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: INSTRUCTIONS.md  USER_MANUAL.md
examples/: 4bit_quantization_demo.py  ANN_search_demo.py  LlamaIndex_integration_demo.py  LlamaIndex_integration_demo.py.py  allowlist_search_demo.py  disk_persistence_demo.py  graph_search.py  turbovec_4bit_quantization_demo.py  turbovec_ANN_search_demo.py  turbovec_allowlist_search_demo.py  turbovec_disk_persistence_demo.py
examples/project/: README.md  agent.py  indexer.py  neo4j_connection.py  populate_medical_graph.py  redis_service.py  tools.py
indexes/: gdpr.ids.json  gdpr.tvim
quanta/: __init__.py  bm25.py  cache.py  chunking.py  config.py  docstore.py  exceptions.py  graph.py  index.py  retriever.py
quanta/integrations/: __init__.py  llama_index.py
quanta/utils/: __init__.py
tests/: conftest.py  test_bm25.py  test_cache.py  test_chunking.py  test_docstore.py  test_graph.py  test_index.py  test_llama_index.py  test_retriever.py  test_tools.py
turborag/: __init__.py  config.py  docstore.py  exceptions.py  graph.py  index.py  retriever.py  types.py
turborag/integrations/: __init__.py  llama_index.py
turborag/utils/: __init__.py  logging.py
turbosearch/: __init__.py  config.py  docstore.py  exceptions.py  graph.py  index.py  retriever.py
turbosearch/integrations/: __init__.py  llama_index.py
turbosearch/utils/: __init__.py
