[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanta"
version = "0.1.0"
description = "Production-ready vector + graph hybrid search library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["vector-search", "graph-search", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "turbovec",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "xxhash>=3.0",
    "duckdb>=0.9",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0",
]
llama-index = [
    "llama-index-core>=0.10",
]
duckdb = [
    "duckdb>=0.9",
]
cache = [
    "redis>=4.0",
]
bm25 = [
    "tantivy>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]
all = [
    "quanta[neo4j,llama-index,duckdb,cache,bm25]",
]

[tool.hatch.build.targets.wheel]
packages = ["quanta"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
